--- a/sources/styles3.css
+++ b/sources/styles3.css
@@ -3,6 +3,9 @@ html,
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     background-color: #f0f0f0;
     font-family: 'Roboto', sans-serif;
     transition: background-color 0.3s ease, color 0.3s ease;
